@@ -2,21 +2,22 @@
 <module type="WEB_MODULE" version="4">
   <component name="NewModuleRootManager">
     <content url="file://$MODULE_DIR$">
-      <sourceFolder url="file://$MODULE_DIR$/component/backend/src" isTestSource="false" packagePrefix="Akeeba\Component\DataCompliance\Administrator" />
-      <sourceFolder url="file://$MODULE_DIR$/component/frontend/src" isTestSource="false" packagePrefix="Akeeba\Component\DataCompliance\Site" />
-      <sourceFolder url="file://$MODULE_DIR$/plugins/system/datacompliance/src" isTestSource="false" packagePrefix="Joomla\Plugin\System\DataCompliance" />
-      <sourceFolder url="file://$MODULE_DIR$/plugins/datacompliance/ars/src" isTestSource="false" packagePrefix="Joomla\Plugin\DataCompliance\ARS" />
-      <sourceFolder url="file://$MODULE_DIR$/plugins/user/datacompliance/src" isTestSource="false" packagePrefix="Joomla\Plugin\User\DataCompliance" />
-      <sourceFolder url="file://$MODULE_DIR$/plugins/datacompliance/ats/src" isTestSource="false" packagePrefix="Joomla\Plugin\DataCompliance\ATS" />
-      <sourceFolder url="file://$MODULE_DIR$/plugins/datacompliance/email/src" isTestSource="false" packagePrefix="Joomla\Plugin\DataCompliance\Email" />
-      <sourceFolder url="file://$MODULE_DIR$/plugins/datacompliance/joomla/src" isTestSource="false" packagePrefix="Joomla\Plugin\DataCompliance\Joomla" />
-      <sourceFolder url="file://$MODULE_DIR$/plugins/datacompliance/loginguard/src" isTestSource="false" packagePrefix="Joomla\Plugin\DataCompliance\LoginGuard" />
-      <sourceFolder url="file://$MODULE_DIR$/plugins/datacompliance/s3/src" isTestSource="false" packagePrefix="Joomla\Plugin\Console\DataCompliance" />
-      <excludeFolder url="file://$MODULE_DIR$/old" />
-      <excludeFolder url="file://$MODULE_DIR$/component/backend/vendor/composer" />
-      <excludeFolder url="file://$MODULE_DIR$/component/backend/vendor/akeeba/s3" />
+      <excludeFolder url="file://$MODULE_DIR$/old"/>
+      <excludeFolder url="file://$MODULE_DIR$/component/backend/vendor/composer"/>
+      <excludeFolder url="file://$MODULE_DIR$/component/backend/vendor/akeeba/s3"/>
+      <sourceFolder url="file://$MODULE_DIR$/component/frontend/src" packagePrefix="Akeeba\Component\DataCompliance\Site\" isTestSource="false"/>
+      <sourceFolder url="file://$MODULE_DIR$/component/backend/src" packagePrefix="Akeeba\Component\DataCompliance\Administrator\" isTestSource="false"/>
+      <sourceFolder url="file://$MODULE_DIR$/plugins/console/datacompliance/src" packagePrefix="Joomla\Plugin\Console\DataCompliance\" isTestSource="false"/>
+      <sourceFolder url="file://$MODULE_DIR$/plugins/datacompliance/ars/src" packagePrefix="Joomla\Plugin\DataCompliance\ARS\" isTestSource="false"/>
+      <sourceFolder url="file://$MODULE_DIR$/plugins/datacompliance/ats/src" packagePrefix="Joomla\Plugin\DataCompliance\ATS\" isTestSource="false"/>
+      <sourceFolder url="file://$MODULE_DIR$/plugins/datacompliance/email/src" packagePrefix="Joomla\Plugin\DataCompliance\Email\" isTestSource="false"/>
+      <sourceFolder url="file://$MODULE_DIR$/plugins/datacompliance/joomla/src" packagePrefix="Joomla\Plugin\DataCompliance\Joomla\" isTestSource="false"/>
+      <sourceFolder url="file://$MODULE_DIR$/plugins/datacompliance/loginguard/src" packagePrefix="Joomla\Plugin\DataCompliance\LoginGuard\" isTestSource="false"/>
+      <sourceFolder url="file://$MODULE_DIR$/plugins/datacompliance/s3/src" packagePrefix="Joomla\Plugin\DataCompliance\S3\" isTestSource="false"/>
+      <sourceFolder url="file://$MODULE_DIR$/plugins/system/datacompliance/src" packagePrefix="Joomla\Plugin\System\DataCompliance\" isTestSource="false"/>
+      <sourceFolder url="file://$MODULE_DIR$/plugins/user/datacompliance/src" packagePrefix="Joomla\Plugin\User\DataCompliance\" isTestSource="false"/>
     </content>
-    <orderEntry type="inheritedJdk" />
-    <orderEntry type="sourceFolder" forTests="false" />
+    <orderEntry type="inheritedJdk"/>
+    <orderEntry type="sourceFolder" forTests="false"/>
   </component>
 </module>
