@@ -1,6 +1,7 @@
 Akeeba Data Compliance 3.1.2
 ================================================================================
 ~ Joomla 5 preparation: Use DatabaseInterface instead of DatabaseDriver
+~ Joomla 5 preparation: Remove obsolete class names
 ~ Block uninstallation of child extensions
 # [LOW] opcache_invalidate may not invalidate a file
 
